src/objects/CMER01_EDG_Webservice_Setting__mdt.object
<CustomObject>
    <description>This Custom metadata is used to store the settings of EDG WS.</description>
    <fields>
        <fullName>SDX_xp_salesforce_Time_Out__c</fullName>
        <defaultValue>(60000)</defaultValue>
        <label>SDX_xp_salesforce_Time_Out</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDX_xp_salesforce_clientId__c</fullName>
        <label>SDX_xp_salesforce_clientId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDX_xp_salesforce_clientSecret__c</fullName>
        <label>SDX_xp_salesforce_clientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDX_xp_salesforce_requester__c</fullName>
        <label>SDX_xp_salesforce_requester</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDX_xp_salesforce_url__c</fullName>
        <label>SDX_xp_salesforce_url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xp_salesforce_Time_Out__c</fullName>
        <defaultValue>(60000)</defaultValue>
        <label>xp_salesforce_Time_Out</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xp_salesforce_clientId__c</fullName>
        <label>xp_salesforce_clientId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xp_salesforce_clientSecret__c</fullName>
        <label>xp_salesforce_clientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xp_salesforce_requester__c</fullName>
        <label>xp_salesforce_requester</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xp_salesforce_url__c</fullName>
        <label>xp_salesforce_url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Get EDG Setting</label>
    <pluralLabel>Get EDG Settings</pluralLabel>
</CustomObject>